--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>phina.js</title>
+  <title>phina-starter</title>
   <script src="./build/bundle.js"></script>
 </head>
 <body>
